--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>  
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-  		<a class="navbar-brand" href="#" style="font-family: 'Noto Serif', serif;">abhishekrajravi.me</a>
+  		<a class="navbar-brand" href="http://abhishekrajravi.me/" style="font-family: 'Noto Serif', serif;">abhishekrajravi.me</a>
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     		<span class="navbar-toggler-icon"></span>
   		</button>
