--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <title>Abhishek Raj Ravi | Portfolio 2018</title>
 	  <link rel="stylesheet" type="text/css" href="css/abhishekrajravi.css">
-	
+		<link rel="shortcut icon" type="image/png" href="img/abhishek.jpg" />
 	<link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Headland+One" rel="stylesheet">
