--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 					<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
 						<h4 class="text-center">AROUND THE WEB</h4><div class="line"></div>
 						<p class="text-center mt-4">
-							<a href="www.linkedin.com/in/arrbxr" target="_blank" class="mr-3"><i class="fa fa-linkedin fa-3x"></i></a>
-							<a href="https://github.com/arrbxr" target="_blank" class="mr-3"><i class="fa fa-github fa-3x"></i></a> 
-							<a href="https://codepen.io/arrbxr/" target="_blank" class="mr-3"><i class="fa fa-codepen fa-3x"></i></a> 
-							<a href="https://medium.com/@arrbxr" target="_blank" class="mr-3"><i class="fa fa-medium fa-3x"></i></a>
-							<a href="mailto:arr.bxr@gmail.com? Subject= The%20Subject&amp;body=TThis%20is%20message%20body" target="_blank"><i class="fa fa-envelope-open fa-3x"></i></a>
+							<a href="www.linkedin.com/in/arrbxr" target="_blank" class="mr-3"><i class="fa fa-linkedin fa-3x linkedin"></i></a>
+							<a href="https://github.com/arrbxr" target="_blank" class="mr-3"><i class="fa fa-github fa-3x github"></i></a> 
+							<a href="https://codepen.io/arrbxr/" target="_blank" class="mr-3"><i class="fa fa-codepen fa-3x codepen"></i></a> 
+							<a href="https://medium.com/@arrbxr" target="_blank" class="mr-3"><i class="fa fa-medium fa-3x medium"></i></a>
+							<a href="mailto:arr.bxr@gmail.com? Subject= The%20Subject&amp;body=Abhishek%20Raj%20Ravi%20" target="_blank" mail><i class="fa fa-envelope-open fa-3x"></i></a>
 						</p>
 					</div>
 				</div>
