--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 							<a href="https://github.com/arrbxr" target="_blank" class="mr-3"><i class="fa fa-github fa-3x github"></i></a> 
 							<a href="https://codepen.io/arrbxr/" target="_blank" class="mr-3"><i class="fa fa-codepen fa-3x codepen"></i></a> 
 							<a href="https://medium.com/@arrbxr" target="_blank" class="mr-3"><i class="fa fa-medium fa-3x medium"></i></a>
-							<a href="mailto:arr.bxr@gmail.com? Subject= The%20Subject&amp;body=Abhishek%20Raj%20Ravi%20" target="_blank" mail><i class="fa fa-envelope-open fa-3x"></i></a>
+							<a href="mailto:arr.bxr@gmail.com? Subject= The%20Subject&amp;body=Abhishek%20Raj%20Ravi%20" target="_blank"><i class="fa fa-envelope-open fa-3x email"></i></a>
 						</p>
 					</div>
 				</div>
