--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 
 		<section class="home-section" id="home-section">
 			<div class="home-section-caption">
-				<p class="text-center img"><img src="img/abhishek.jpg" class="img-fulid rounded-circle" width="200px" height="200"></p>
-				<p class="text-center name">Abhishek Raj Ravi</p><div class="line"></div>
-				<p class="text-center front-end">fronted Developer</p>
+				<p class="text-center img"><img src="img/abhishek.jpg" class="img-fulid rounded-circle wow bounceInDown"  data-wow-duration="2s" data-wow-delay="1s" width="200px" height="200"></p>
+				<p class="text-center name wow bounceInLeft"  data-wow-duration="2s" data-wow-delay="1s">Abhishek Raj Ravi</p><div class="line wow zoomIn"  data-wow-duration="2s" data-wow-delay="1s"></div>
+				<p class="text-center front-end wow bounceInRight" data-wow-duration="2s" data-wow-delay="1s">fronted Developer</p>
 			</div>
 		</section>
 
@@ -58,7 +58,7 @@
 						<h4 class="text-md-right" style="font-family: 'Headland One', serif;">ABOUT&nbsp;&nbsp;&nbsp; </h4>
 					</div>
 					<div class="col-xl-6 col-md-6 col-lg-6 col-sm-12">
-						<div class="about-desc">
+						<div class="about-desc wow fadeInUp"  data-wow-duration="2s" data-wow-delay="0.5s">
 							<p>My name is Abhishek Raj Ravi. I'm stduent of New Govt. Polyechnic, Patna-13. 
 							My major areas of interest Web Development. Currently, I code in HTML, CSS, JavaScript, ReactJs and am working to become proficient with NodeJs.</p><br>
 							<p>I have a nerdy knowledge about programming in C, C++ and Java.</p><br>
@@ -68,7 +68,7 @@
 					</div>
 					<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
 						<div class="my-cv">
-							<p style="font-family: 'Headland One', serif;"><i class="fa fa-download fa-2x" aria-hidden="true"></i> GET THE CV </p>
+							<p style="font-family: 'Headland One', serif;"><i class="fa fa-download fa-2x wow fadeIn infinite" data-wow-duration="1.2s" data-wow-delay="2s"  aria-hidden="true" style="color:aliceblue"></i> GET THE CV </p>
 						</div>
 					</div>
 				</div><hr>
@@ -77,7 +77,7 @@
 					<div class="col-xl-3 col-md-3 col-lg-3 col-sm-12">
 						<h4 class="text-md-right" style="font-family: 'Headland One', serif;">EDUCATION&nbsp;&nbsp;&nbsp;</h4>
 					</div>
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 wow zoomIn"  data-wow-duration="2s" data-wow-delay="1s">
 						<h5>Diploma in computer Science & Engineering</h5>
 						<p>New Govt. Polytechnic, Patliputra, Patna-13</p>
 					</div>
@@ -87,7 +87,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 offset-md-3">
+					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 offset-md-3 wow zoomIn"  data-wow-duration="2s" data-wow-delay="1s">
 						<h5>Bihar School Examination Board, Patna (12th BSEB)</h5>
 						<p>Mata Indrani College, Chausa Buxar</p>
 					</div>
@@ -97,7 +97,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 offset-md-3">
+					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 offset-md-3 wow zoomIn"  data-wow-duration="2s" data-wow-delay="1s">
 						<h5>Bihar School Examination Board, Patna (10th BSEB)</h5>
 						<p>D. P. High School Unuwash, Buxar</p>
 					</div>
@@ -106,16 +106,16 @@
 					</div>
 				</div><hr>
 				
-				<h4 class="mt-4 text-center mb-0 believe" style="font-family: 'Headland One', serif;">I believe <i class="fa fa-hand-o-right"></i></h4><div class="line2"></div>
-				<p class="text-center" style="font-family: 'Josefin Slab', serif;"><i class="fa fa-quote-left fa-2x"></i><span class="quote">&nbsp;The man who can be control of himself, will be able to conquer the world.&nbsp;</span><i class="fa fa-quote-right fa-2x"></i> </p>
+				<h4 class="mt-4 text-center mb-0 believe wow zoomInDown"  data-wow-duration="2s" data-wow-delay="0.5s" style="font-family: 'Headland One', serif;">I believe <i class="fa fa-hand-o-right"></i></h4><div class="line2 wow flip"  data-wow-duration="2s" data-wow-delay="0.5s"></div>
+				<p class="text-center wow zoomInUp" data-wow-duration="2s" data-wow-delay="0.5s"  style="font-family: 'Josefin Slab', serif;"><i class="fa fa-quote-left fa-2x"></i><span class="quote">&nbsp;The man who can be control of himself, will be able to conquer the world.&nbsp;</span><i class="fa fa-quote-right fa-2x"></i> </p>
 			</div>
 		</section>
 
 		<section class="contacts-section py-5">
 			<div class="container">
-				<div class="row">
+				<div class="row wow fadeInDown " data-wow-duratin="2s" data-wow-delay="0.5s" >
 					<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-						<h4 class="text-center">AROUND THE WEB</h4><div class="line"></div>
+						<h4 class="text-center" >AROUND THE WEB</h4><div class="line"></div>
 						<p class="text-center mt-4">
 							<a href="www.linkedin.com/in/arrbxr" target="_blank" class="mr-3"><i class="fa fa-linkedin fa-3x linkedin"></i></a>
 							<a href="https://github.com/arrbxr" target="_blank" class="mr-3"><i class="fa fa-github fa-3x github"></i></a> 
@@ -132,7 +132,7 @@
 			<div class="container">
 				<div class="row py-3">
 					<div class="col-lg-12 col-xl-12 col-md-12 col-sm-12">
-						<p class="text-center mb-0">&copy; abhishekrajravi 2018</p>
+						<p class="text-center mb-0 wow fadeInDown infinite"  data-wow-duration="3s" data-wow-delay="1s">&copy; abhishekrajravi 2018</p>
 					</div>
 				</div>
 			</div>
@@ -188,7 +188,12 @@
 	<script	src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+
+	<script>
+		new WOW().init();
+</script>
+
 	<script>
 			$(document).ready(function() {
 			$("a").on('click', function(event) {
