--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			<div class="container">
 				<div class="row py-3">
 					<div class="col-lg-12 col-xl-12 col-md-12 col-sm-12">
-						<p class="text-center mb-0 wow fadeInDown infinite"  data-wow-duration="3s" data-wow-delay="1s">&copy; abhishekrajravi 2018</p>
+						<p class="text-center mb-0">&copy; abhishekrajravi 2018</p>
 					</div>
 				</div>
 			</div>
