--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					</div>
 					<div class="col-xl-6 col-md-6 col-lg-6 col-sm-12">
 						<div class="about-desc wow fadeInUp"  data-wow-duration="2s" data-wow-delay="0.5s">
-							<p>My name is Abhishek Raj Ravi. I'm stduent of New Govt. Polyechnic, Patna-13. 
+							<p>My name is Abhishek Raj Ravi. I'm student of New Govt. Polyechnic, Patna-13. 
 							My major areas of interest Web Development. Currently, I code in HTML, CSS, JavaScript, ReactJs and am working to become proficient with NodeJs.</p><br>
 							<p>I have a nerdy knowledge about programming in C, C++ and Java.</p><br>
 							<p>I am passionate about Open Source. I have good experience with GIT technology. I am actively open source contributor since November. 2017.
@@ -123,6 +123,8 @@
 							<a href="https://medium.com/@arrbxr" target="_blank" class="mr-3"><i class="fa fa-medium fa-3x medium"></i></a>
 							<a href="mailto:arr.bxr@gmail.com? Subject= The%20Subject&amp;body=Abhishek%20Raj%20Ravi%20" target="_blank"><i class="fa fa-envelope-open fa-3x email"></i></a>
 						</p>
+						<p class="text-center mb-0"><a href="tel:+918862838410" class="mobile"><i class="fa fa-phone-square"> </i> +91 8862838410</a></p>
+						<p class="text-center location"><i class="fa fa-map-marker"></i> Patna, India</p>
 					</div>
 				</div>
 			</div>
@@ -132,7 +134,7 @@
 			<div class="container">
 				<div class="row py-3">
 					<div class="col-lg-12 col-xl-12 col-md-12 col-sm-12">
-						<p class="text-center mb-0">&copy; abhishekrajravi 2018</p>
+						<p class="text-center mb-0" style="font-weight:600; color:rgb(32, 32, 32);">&copy; <i>abhishekrajravi</i> 2018</p>
 					</div>
 				</div>
 			</div>
