--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							<p>My name is Abhishek Raj Ravi. I'm student of New Govt. Polyechnic, Patna-13. 
 							My major areas of interest Web Development. Currently, I code in HTML, CSS, JavaScript, ReactJs and am working to become proficient with NodeJs.</p><br>
 							<p>I have a nerdy knowledge about programming in C, C++ and Java.</p><br>
-							<p>I am passionate about Open Source. I have good experience with GIT technology. I am actively open source contributor since November. 2017.
+							<p>I am passionate about Open Source. I have good experience with GIT technology. I am actively open source contributor since December, 2017.
 							</p><br>
 						</div>
 					</div>
