--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Headland+One" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
+	
   </head>
   <body>  
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-  		<a class="navbar-brand" href="http://abhishekrajravi.me/" style="font-family: 'Noto Serif', serif;">abhishekrajravi.me</a>
+  		<a class="navbar-brand" href="http://abhishekrajravi.me/" style="font-family: 'Noto Serif', serif;"><i class="fa fa-terminal"> abhishekrajravi.me</i> </a>
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     		<span class="navbar-toggler-icon"></span>
   		</button>
@@ -117,14 +118,15 @@
 					<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
 						<h4 class="text-center" >AROUND THE WEB</h4><div class="line"></div>
 						<p class="text-center mt-4">
-							<a href="www.linkedin.com/in/arrbxr" target="_blank" class="mr-3"><i class="fa fa-linkedin fa-3x linkedin"></i></a>
-							<a href="https://github.com/arrbxr" target="_blank" class="mr-3"><i class="fa fa-github fa-3x github"></i></a> 
+							<a href="www.linkedin.com/in/arrbxr" target="_blank" class="mr-3"><i class="fa fa-linkedin-square fa-3x linkedin"></i></a>
+							<a href="https://github.com/arrbxr" target="_blank" class="mr-3"><i class="fa fa-github-square fa-3x github"></i></a> 
 							<a href="https://codepen.io/arrbxr/" target="_blank" class="mr-3"><i class="fa fa-codepen fa-3x codepen"></i></a> 
 							<a href="https://medium.com/@arrbxr" target="_blank" class="mr-3"><i class="fa fa-medium fa-3x medium"></i></a>
-							<a href="mailto:arr.bxr@gmail.com? Subject= The%20Subject&amp;body=Abhishek%20Raj%20Ravi%20" target="_blank"><i class="fa fa-envelope-open fa-3x email"></i></a>
+							<a href="https://www.facebook.com/arrbxr" target="_blank"><i class="fa fa-facebook-square fa-3x facebook"></i></a>
 						</p>
+						<p class="text-center mb-0"><a href="mailto:arr.bxr@gmail.com? Subject= The%20Subject&amp;body=Abhishek%20Raj%20Ravi%20" class="mobile"><i class="fa fa-envelope-open"></i> arr.bxr@gmail.com</a> </p>
 						<p class="text-center mb-0"><a href="tel:+918862838410" class="mobile"><i class="fa fa-phone-square"> </i> +91 8862838410</a></p>
-						<p class="text-center location"><i class="fa fa-map-marker"></i> Patna, India</p>
+						<p class="text-center mobile"><i class="fa fa-map-marker"></i> Patna, India</p>
 					</div>
 				</div>
 			</div>
