some mistake are correct

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="home-section-caption">
 				<p class="text-center img"><img src="img/abhishek.jpg" class="img-fulid rounded-circle wow bounceInDown"  data-wow-duration="2s" data-wow-delay="1s" width="200px" height="200"></p>
 				<p class="text-center name wow bounceInLeft"  data-wow-duration="2s" data-wow-delay="1s">Abhishek Raj Ravi</p><div class="line wow zoomIn"  data-wow-duration="2s" data-wow-delay="1s"></div>
-				<p class="text-center front-end wow bounceInRight" data-wow-duration="2s" data-wow-delay="1s">fronted Developer</p>
+				<p class="text-center front-end wow bounceInRight" data-wow-duration="2s" data-wow-delay="1s">Front-End Developer</p>
 			</div>
 		</section>
 
@@ -62,8 +62,8 @@
 						<div class="about-desc wow fadeInUp"  data-wow-duration="2s" data-wow-delay="0.5s">
 							<p>My name is Abhishek Raj Ravi. I'm student of New Govt. Polyechnic, Patna-13. 
 							My major areas of interest Web Development. Currently, I code in HTML, CSS, JavaScript, ReactJs and am working to become proficient with NodeJs.</p><br>
-							<p>I have a nerdy knowledge about programming in C, C++ and Java.</p><br>
-							<p>I am passionate about Open Source. I have good experience with GIT technology. I am actively open source contributor since December, 2017.
+							<p>I, also have an extensive knowledge of C, C++, and Java</p><br>
+							<p>I am passionate about Open Source, have considerable experience with GIT technology, and have been an active open source contributor since December 2017.
 							</p><br>
 						</div>
 					</div>
