--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<p>My name is Abhishek Raj Ravi. I'm student of New Govt. Polyechnic, Patna-13. 
 							My major areas of interest Web Development. Currently, I code in HTML, CSS, JavaScript, ReactJs and am working to become proficient with NodeJs.</p><br>
 							<p>I, also have an extensive knowledge of C, C++, and Java</p><br>
-							<p>I am passionate about Open Source, have considerable experience with GIT technology, and have been an active open source contributor since December 2017.
+							<p>I am passionate about open Source, have considerable experience with GIT technology, and have been an active open source contributor since December 2017.
 							</p><br>
 						</div>
 					</div>
