--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					</div>
 				</div><hr>
 				
-				<h4 class="mt-4 text-center mb-0 believe wow zoomInDown"  data-wow-duration="2s" data-wow-delay="0.5s" style="font-family: 'Headland One', serif;">I believe <i class="fa fa-hand-o-right"></i></h4><div class="line2 wow flip"  data-wow-duration="2s" data-wow-delay="0.5s"></div>
+				<h5 class="mt-4 text-center mb-0 believe wow zoomInDown"  data-wow-duration="2s" data-wow-delay="0.5s" style="font-family: 'Headland One', serif;">I'm thinking maybe<i class="fa fa-hand-o-right"></i></h5><div class="line2 wow flip"  data-wow-duration="2s" data-wow-delay="0.5s"></div>
 				<p class="text-center wow zoomInUp" data-wow-duration="2s" data-wow-delay="0.5s"  style="font-family: 'Josefin Slab', serif;"><i class="fa fa-quote-left fa-2x"></i><span class="quote">&nbsp;The man who can be control of himself, will be able to conquer the world.&nbsp;</span><i class="fa fa-quote-right fa-2x"></i> </p>
 			</div>
 		</section>
