--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
 					<div class="col-xl-6 col-md-6 col-lg-6 col-sm-12">
 						<div class="about-desc wow fadeInUp"  data-wow-duration="2s" data-wow-delay="0.5s">
 							<p>My name is Abhishek Raj Ravi. I'm student of New Govt. Polyechnic, Patna-13. 
-							My major areas of interest Web Development. Currently, I code in HTML, CSS, JavaScript, ReactJs and am working to become proficient with NodeJs.</p><br>
+							My major areas of interested Web Development. Currently, I'm able to code in HTML, CSS, JavaScript, ReactJs and i'm working to become proficient with NodeJs.</p><br>
 							<p>I, also have an extensive knowledge of C, C++, and Java</p><br>
 							<p>I am passionate about open Source, have considerable experience with GIT technology, and have been an active open source contributor since December 2017.
 							</p><br>
 						</div>
 					</div>
 					<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
-						<div class="my-cv">
-							<p style="font-family: 'Headland One', serif;"><i class="fa fa-download fa-2x wow fadeIn infinite" data-wow-duration="1.2s" data-wow-delay="2s"  aria-hidden="true" style="color:aliceblue"></i> GET THE CV </p>
+						<div class="my-cv mb-5">
+							<p style="font-family: 'Headland One', serif;"><i class="fa fa-download fa-2x wow fadeIn infinite" data-wow-duration="1.2s" data-wow-delay="2s"  aria-hidden="true" style="color:rgb(2, 62, 70)"></i> GET THE CV </p>
 						</div>
 					</div>
-				</div><hr>
+				</div><div class="footer-line"></div>
 
 				<div class="row pt-4">
 					<div class="col-xl-3 col-md-3 col-lg-3 col-sm-12">
@@ -102,22 +102,22 @@
 						<h5>Bihar School Examination Board, Patna (10th BSEB)</h5>
 						<p>D. P. High School Unuwash, Buxar</p>
 					</div>
-					<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
+					<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 mb-3">
 						<p>2013</p>
 					</div>
-				</div><hr>
+				</div><div class="footer-line"></div>
 				
-				<h4 class="mt-4 text-center mb-0 believe wow zoomInDown"  data-wow-duration="2s" data-wow-delay="0.5s" style="font-family: 'Headland One', serif;">I believe <i class="fa fa-hand-o-right"></i></h4><div class="line2 wow flip"  data-wow-duration="2s" data-wow-delay="0.5s"></div>
-				<p class="text-center wow zoomInUp" data-wow-duration="2s" data-wow-delay="0.5s"  style="font-family: 'Josefin Slab', serif;"><i class="fa fa-quote-left fa-2x"></i><span class="quote">&nbsp;The man who can be control of himself, will be able to conquer the world.&nbsp;</span><i class="fa fa-quote-right fa-2x"></i> </p>
+				<h5 class="mt-5 text-center believe wow zoomInDown"  data-wow-duration="2s" data-wow-delay="0.5s" style="font-family: 'Headland One', serif;">i'm thinking maybe </h5><div class="line2  wow flip"  data-wow-duration="2s" data-wow-delay="0.5s"></div>
+				<p class="text-center wow zoomInUp" data-wow-duration="2s" data-wow-delay="0.5s"  style="font-family: 'Josefin Slab', serif;"><i class="fa fa-quote-left fa-2x"></i><span class="quote">&nbsp;The man who can be control of himself, will be in able to conquer the world.&nbsp;</span><i class="fa fa-quote-right fa-2x"></i> </p>
 			</div>
-		</section>
+	
 
-		<section class="contacts-section py-5">
-			<div class="container">
+		
+			<div class="container py-5">
 				<div class="row wow fadeInDown " data-wow-duratin="2s" data-wow-delay="0.5s" >
 					<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-						<h4 class="text-center" >AROUND THE WEB</h4><div class="line"></div>
-						<p class="text-center mt-4">
+						<h4 class="text-center" >AROUND THE WEB</h4><div class="line mt-a"></div>
+						<p class="text-center mt-5">
 							<a href="www.linkedin.com/in/arrbxr" target="_blank" class="mr-3"><i class="fa fa-linkedin-square fa-3x linkedin"></i></a>
 							<a href="https://github.com/arrbxr" target="_blank" class="mr-3"><i class="fa fa-github-square fa-3x github"></i></a> 
 							<a href="https://codepen.io/arrbxr/" target="_blank" class="mr-3"><i class="fa fa-codepen fa-3x codepen"></i></a> 
@@ -130,13 +130,13 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section><div class="footer-line"></div>
 
 		<section class="footer-section">
 			<div class="container">
 				<div class="row py-3">
 					<div class="col-lg-12 col-xl-12 col-md-12 col-sm-12">
-						<p class="text-center mb-0" style="font-weight:600; color:rgb(32, 32, 32);">&copy; <i>abhishekrajravi</i> 2018</p>
+						<p class="text-center mb-0">&copy; <i>abhishekrajravi</i> 2018</p>
 					</div>
 				</div>
 			</div>
