--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<p style="font-family: 'Headland One', serif;"><i class="fa fa-download fa-2x wow fadeIn infinite" data-wow-duration="1.2s" data-wow-delay="2s"  aria-hidden="true" style="color:rgb(2, 62, 70)"></i> GET THE CV </p>
 						</div>
 					</div>
-				</div><div class="footer-line"></div>
+				</div>
 
 				<div class="row pt-4">
 					<div class="col-xl-3 col-md-3 col-lg-3 col-sm-12">
@@ -105,15 +105,10 @@
 					<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 mb-3">
 						<p>2013</p>
 					</div>
-				</div><div class="footer-line"></div>
+				</div>
 				
-<<<<<<< HEAD
 				<h5 class="mt-5 text-center believe wow zoomInDown"  data-wow-duration="2s" data-wow-delay="0.5s" style="font-family: 'Headland One', serif;">i'm thinking maybe </h5><div class="line2  wow flip"  data-wow-duration="2s" data-wow-delay="0.5s"></div>
 				<p class="text-center wow zoomInUp" data-wow-duration="2s" data-wow-delay="0.5s"  style="font-family: 'Josefin Slab', serif;"><i class="fa fa-quote-left fa-2x"></i><span class="quote">&nbsp;The man who can be control of himself, will be in able to conquer the world.&nbsp;</span><i class="fa fa-quote-right fa-2x"></i> </p>
-=======
-				<h5 class="mt-4 text-center mb-0 believe wow zoomInDown"  data-wow-duration="2s" data-wow-delay="0.5s" style="font-family: 'Headland One', serif;">I'm thinking maybe</h5><div class="line2 wow flip"  data-wow-duration="2s" data-wow-delay="0.5s"></div>
-				<p class="text-center wow zoomInUp" data-wow-duration="2s" data-wow-delay="0.5s"  style="font-family: 'Josefin Slab', serif;"><i class="fa fa-quote-left fa-2x"></i><span class="quote">&nbsp;The man who can be in control of himself, will be able to conquer the world.&nbsp;</span><i class="fa fa-quote-right fa-2x"></i> </p>
->>>>>>> 6ffd415615b616b9d0b303253f7bc6854abcf460
 			</div>
 	
 
