--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 		<section class="home-section" id="home-section">
 			<div class="home-section-caption">
 				<p class="text-center img"><img src="img/abhishek.jpg" class="img-fulid rounded-circle wow bounceInDown"  data-wow-duration="2s" data-wow-delay="1s" width="200px" height="200"></p>
-				<p class="text-center name wow bounceInLeft"  data-wow-duration="2s" data-wow-delay="1s">Abhishek Raj Ravi</p><div class="line wow zoomIn"  data-wow-duration="2s" data-wow-delay="1s"></div>
-				<p class="text-center front-end wow bounceInRight" data-wow-duration="2s" data-wow-delay="1s">Front-End Developer</p>
+				<p class="text-center my-name wow bounceInLeft"  data-wow-duration="2s" data-wow-delay="1s">Abhishek Raj Ravi</p><div class="line wow zoomIn"  data-wow-duration="2s" data-wow-delay="1s"></div>
+				<p class="text-center my-name-desc wow bounceInRight" data-wow-duration="2s" data-wow-delay="1s">Front-End Developer</p>
 			</div>
 		</section>
 
@@ -59,7 +59,7 @@
 						<h4 class="text-md-right" style="font-family: 'Headland One', serif;">ABOUT&nbsp;&nbsp;&nbsp; </h4>
 					</div>
 					<div class="col-xl-6 col-md-6 col-lg-6 col-sm-12">
-						<div class="about-desc wow fadeInUp"  data-wow-duration="2s" data-wow-delay="0.5s">
+						<div class="wow fadeInUp"  data-wow-duration="2s" data-wow-delay="0.5s">
 							<p>My name is Abhishek Raj Ravi. I'm student of New Govt. Polyechnic, Patna-13. 
 							My major areas of interested Web Development. Currently, I'm able to code in HTML, CSS, JavaScript, ReactJs and i'm working to become proficient with NodeJs.</p><br>
 							<p>I, also have an extensive knowledge of C, C++, and Java</p><br>
@@ -69,7 +69,7 @@
 					</div>
 					<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
 						<div class="my-cv mb-5">
-							<p style="font-family: 'Headland One', serif;"><i class="fa fa-download fa-2x wow fadeIn infinite" data-wow-duration="1.2s" data-wow-delay="2s"  aria-hidden="true" style="color:rgb(2, 62, 70)"></i> GET THE CV </p>
+							<p style="font-family: 'Headland One', serif; color:aqua"><i class="fa fa-download fa-2x wow fadeIn infinite" data-wow-duration="1.2s" data-wow-delay="2s"  aria-hidden="true" style="color:rgb(110, 241, 255)"></i> GET THE CV </p>
 						</div>
 					</div>
 				</div>
@@ -107,16 +107,13 @@
 					</div>
 				</div>
 				
-				<h5 class="mt-5 text-center believe wow zoomInDown"  data-wow-duration="2s" data-wow-delay="0.5s" style="font-family: 'Headland One', serif;">i'm thinking maybe </h5><div class="line2  wow flip"  data-wow-duration="2s" data-wow-delay="0.5s"></div>
+				<h5 class="mt-5 text-center i-think wow zoomInDown"  data-wow-duration="2s" data-wow-delay="0.5s" style="font-family: 'Headland One', serif;">i'm thinking maybe </h5><div class="line2  wow flip"  data-wow-duration="2s" data-wow-delay="0.5s"></div>
 				<p class="text-center wow zoomInUp" data-wow-duration="2s" data-wow-delay="0.5s"  style="font-family: 'Josefin Slab', serif;"><i class="fa fa-quote-left fa-2x"></i><span class="quote">&nbsp;The man who can be control of himself, will be in able to conquer the world.&nbsp;</span><i class="fa fa-quote-right fa-2x"></i> </p>
-			</div>
-	
-
-		
-			<div class="container py-5">
+			</div>		
+			<div class="container pt-5 pb-2">
 				<div class="row wow fadeInDown " data-wow-duratin="2s" data-wow-delay="0.5s" >
 					<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-						<h4 class="text-center" >AROUND THE WEB</h4><div class="line mt-a"></div>
+						<h4 class="text-center" >AROUND THE WEB</h4><div class="line mt-a"></div><div class="line2"></div>
 						<p class="text-center mt-5">
 							<a href="www.linkedin.com/in/arrbxr" target="_blank" class="mr-3"><i class="fa fa-linkedin-square fa-3x linkedin"></i></a>
 							<a href="https://github.com/arrbxr" target="_blank" class="mr-3"><i class="fa fa-github-square fa-3x github"></i></a> 
@@ -124,9 +121,9 @@
 							<a href="https://medium.com/@arrbxr" target="_blank" class="mr-3"><i class="fa fa-medium fa-3x medium"></i></a>
 							<a href="https://www.facebook.com/arrbxr" target="_blank"><i class="fa fa-facebook-square fa-3x facebook"></i></a>
 						</p>
-						<p class="text-center mb-0"><a href="mailto:arr.bxr@gmail.com? Subject= The%20Subject&amp;body=Abhishek%20Raj%20Ravi%20" class="mobile"><i class="fa fa-envelope-open"></i> arr.bxr@gmail.com</a> </p>
-						<p class="text-center mb-0"><a href="tel:+918862838410" class="mobile"><i class="fa fa-phone-square"> </i> +91 8862838410</a></p>
-						<p class="text-center mobile"><i class="fa fa-map-marker"></i> Patna, India</p>
+						<p class="text-center mb-0"><a href="mailto:arr.bxr@gmail.com? Subject= The%20Subject&amp;body=Abhishek%20Raj%20Ravi%20" class="location"><i class="fa fa-envelope-open"></i> arr.bxr@gmail.com</a> </p>
+						<p class="text-center mb-0"><a href="tel:+918862838410" class="location"><i class="fa fa-phone-square"> </i> +91 8862838410</a></p>
+						<p class="text-center location" style="color: rgb(0, 236, 146)"><i class="fa fa-map-marker"></i> Patna, India</p>
 					</div>
 				</div>
 			</div>
@@ -134,7 +131,7 @@
 
 		<section class="footer-section">
 			<div class="container">
-				<div class="row py-3">
+				<div class="py-4">
 					<div class="col-lg-12 col-xl-12 col-md-12 col-sm-12">
 						<p class="text-center mb-0">&copy; <i>abhishekrajravi</i> 2018</p>
 					</div>
