--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 					</div>
 				</div>
 				
-				<h5 class="mt-5 text-center i-think wow zoomInDown"  data-wow-duration="2s" data-wow-delay="0.5s" style="font-family: 'Headland One', serif;">i'm thinking maybe </h5><div class="line2  wow flip"  data-wow-duration="2s" data-wow-delay="0.5s"></div>
-				<p class="text-center wow zoomInUp" data-wow-duration="2s" data-wow-delay="0.5s"  style="font-family: 'Josefin Slab', serif;"><i class="fa fa-quote-left fa-2x"></i><span class="quote">&nbsp;The man who can be control of himself, will be in able to conquer the world.&nbsp;</span><i class="fa fa-quote-right fa-2x"></i> </p>
+				<h5 class="mt-5 text-center i-think wow zoomInDown"  data-wow-duration="2s" data-wow-delay="0.5s" style="font-family: 'Headland One', serif; color:aquamarine">i'm thinking maybe </h5><div class="line2  wow flip"  data-wow-duration="2s" data-wow-delay="0.5s"></div>
+				<p class="text-center wow zoomInUp" data-wow-duration="2s" data-wow-delay="0.5s"  style="font-family: 'Josefin Slab', serif;"><i class="fa fa-quote-left fa-2x" style="color:rgb(159, 255, 255)"></i><span class="quote" style="color:rgb(0, 167, 189)">&nbsp;The man who can be control of himself, will be in able to conquer the world.&nbsp;</span><i class="fa fa-quote-right fa-2x" style="color:rgb(159, 255, 255)"></i> </p>
 			</div>		
 			<div class="container pt-5 pb-2">
 				<div class="row wow fadeInDown " data-wow-duratin="2s" data-wow-delay="0.5s" >
