--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta name="description" content="I'm Abhishek Raj Ravi, a front-end developer from india, and this is my portfolio.">
+
+		<!-- Facebook -->
+		<meta property="og:title" content="Abhishek Raj Ravi Portfolio">
+    <meta property="og:site_name" content="abhishekrajravi.me">
+    <meta property="og:url" content="http://abhishekrajravi.me/">
+    <meta property="og:description" content="I'm Abhishek Raj Ravi, a front-end developer from india, and this is my portfolio. ">
+		<meta property="og:image" content="https://github.com/arrbxr/portfolio/blob/master/img/abhishek.jpg?raw=true">
+		<meta property="og:type" content="website">
+
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
@@ -12,10 +23,20 @@
     <title>Abhishek Raj Ravi | Portfolio 2018</title>
 	  <link rel="stylesheet" type="text/css" href="css/abhishekrajravi.css">
 		<link rel="shortcut icon" type="image/png" href="img/abhishek.jpg" />
-	<link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Headland+One" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Headland+One" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
+
+		<script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'PUT-YOUR-CODE-HERE', 'PUT-YOUR-WEBSITE-HERE');
+      ga('send', 'pageview');
+    </script>
+
 	
   </head>
   <body>  
