--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
 		<link href="https://fonts.googleapis.com/css?family=Headland+One" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
 
-		<script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'PUT-YOUR-CODE-HERE', 'PUT-YOUR-WEBSITE-HERE');
-      ga('send', 'pageview');
-    </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112684057-1"></script>
+	<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112684057-1');
+	</script>
+
 
 	
   </head>
@@ -136,11 +138,11 @@
 					<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
 						<h4 class="text-center" >AROUND THE WEB</h4><div class="line mt-a"></div><div class="line2"></div>
 						<p class="text-center mt-5">
-							<a href="www.linkedin.com/in/arrbxr" target="_blank" class="mr-3"><i class="fa fa-linkedin-square fa-3x linkedin"></i></a>
-							<a href="https://github.com/arrbxr" target="_blank" class="mr-3"><i class="fa fa-github-square fa-3x github"></i></a> 
-							<a href="https://codepen.io/arrbxr/" target="_blank" class="mr-3"><i class="fa fa-codepen fa-3x codepen"></i></a> 
-							<a href="https://medium.com/@arrbxr" target="_blank" class="mr-3"><i class="fa fa-medium fa-3x medium"></i></a>
-							<a href="https://www.facebook.com/arrbxr" target="_blank"><i class="fa fa-facebook-square fa-3x facebook"></i></a>
+							<a href="https://forum.freecodecamp.org/u/arrbxr/activity" target="_blank" class="mr-3"><i class="fa fa-free-code-camp fa-2x free-code-camp"></i></a>
+							<a href="https://github.com/arrbxr" target="_blank" class="mr-3"><i class="fa fa-github-square fa-2x github"></i></a> 
+							<a href="https://codepen.io/arrbxr/" target="_blank" class="mr-3"><i class="fa fa-codepen fa-2x codepen"></i></a> 
+							<a href="https://medium.com/@arrbxr" target="_blank" class="mr-3"><i class="fa fa-medium fa-2x medium"></i></a>
+							<a href="https://www.facebook.com/arrbxr" target="_blank"><i class="fa fa-facebook-square fa-2x facebook"></i></a>
 						</p>
 						<p class="text-center mb-0"><a href="mailto:arr.bxr@gmail.com? Subject= The%20Subject&amp;body=Abhishek%20Raj%20Ravi%20" class="location"><i class="fa fa-envelope-open"></i> arr.bxr@gmail.com</a> </p>
 						<p class="text-center mb-0"><a href="tel:+918862838410" class="location"><i class="fa fa-phone-square"> </i> +91 8862838410</a></p>
