--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<h4 class="text-md-right" style="font-family: 'Headland One', serif;">ABOUT&nbsp;&nbsp;&nbsp; </h4>
 					</div>
 					<div class="col-xl-6 col-md-6 col-lg-6 col-sm-12">
-						<div class="wow fadeInUp"  data-wow-duration="2s" data-wow-delay="0.5s">
+						<div class="wow zoomIn"  data-wow-duration="2s" data-wow-delay="0.5s">
 							<p>My name is Abhishek Raj Ravi. I'm student of New Govt. Polyechnic, Patna-13. 
 							My major areas of interested Web Development. Currently, I'm able to code in HTML, CSS, JavaScript, ReactJs and i'm working to become proficient with NodeJs.</p><br>
 							<p>I, also have an extensive knowledge of C, C++, and Java</p><br>
@@ -91,8 +91,8 @@
 						</div>
 					</div>
 					<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
-						<div class="my-cv mb-5">
-							<p style="font-family: 'Headland One', serif; color:aqua"><i class="fa fa-download fa-2x wow fadeIn infinite" data-wow-duration="1.2s" data-wow-delay="2s"  aria-hidden="true" style="color:rgb(110, 241, 255)"></i> GET THE CV </p>
+						<div class="mb-5">
+							<p style="font-family: 'Headland One', serif;"><i class="fa fa-download fa-2x wow fadeIn infinite" data-wow-duration="1.2s" data-wow-delay="2s"  aria-hidden="true" style="color:rgb(174, 190, 192)"></i> GET THE CV </p>
 						</div>
 					</div>
 				</div>
