--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 						</p>
 						<p class="text-center mb-0"><a href="mailto:arr.bxr@gmail.com? Subject= The%20Subject&amp;body=Abhishek%20Raj%20Ravi%20" class="location"><i class="fa fa-envelope-open"></i> arr.bxr@gmail.com</a> </p>
 						<p class="text-center mb-0"><a href="tel:+918862838410" class="location"><i class="fa fa-phone-square"> </i> +91 8862838410</a></p>
-						<p class="text-center location"><i class="fa fa-map-marker"></i> Patna, India</p>
+						<p class="text-center location" style="color:aquamarine"><i class="fa fa-map-marker"></i> Patna, India</p>
 					</div>
 				</div>
 			</div>
