--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
 		<div class="modal-dialog" role="document">
 		  <div class="modal-content">
 			<div class="modal-header">
-			  <h5 class="modal-title" id="exampleModalLongTitle">Send Message</h5>
+			  <h5 class="modal-title text-center" id="exampleModalLongTitle">Send Message</h5>
 			  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-				<span aria-hidden="true">&times;</span>
+				<span aria-hidden="true" >&times;</span>
 			  </button>
 			</div>
 			<div class="modal-body">
@@ -182,7 +182,7 @@
 							<div class="input-group-prepend">
 			    				<div class="input-group-text">A</div>
 							</div>
-							<input type="text" class="form-control text-primary" id="inlineFormInputGroup" placeholder="Enter Your Name...">
+							<input type="text" class="form-control text-aqua" id="inlineFormInputGroup" placeholder="Enter Your Name...">
 			        	</div>
 					</div>
 
@@ -191,15 +191,15 @@
 							<div class="input-group-prepend">
 						        <div class="input-group-text">@</div>
 							</div>
-							<input type="email" class="form-control text-primary" id="inlineFormInputGroup" placeholder="Email Address...">					  
+							<input type="email" class="form-control text-aqua" id="inlineFormInputGroup" placeholder="Email Address...">					  
 						</div>
 					</div>
 
 					<div class="form-group">
-						<textarea class="form-control text-primary" rows="3" placeholder="Enter Here Message..."></textarea>
-						<small class="text-danger"><i class="fa fa-exclamation-circle"></i> Sorry mail system currently not working. </small>
+						<textarea class="form-control text-aqua" rows="3" placeholder="Enter Here Message..."></textarea>
+						<small class="text-red"><i class="fa fa-exclamation-circle"></i> Sorry mail system currently not working. </small>
 					</div>
-					<button type="submit" class="btn btn-outline-primary ">Submit</button>
+					<button type="submit" class="btn btn-outline-aqua ">Submit</button>
 				</form>
 			</div>
 		  </div>
@@ -210,7 +210,7 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	  
 	<script	src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 
