--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 						<textarea class="form-control text-aqua" rows="3" placeholder="Enter Here Message..."></textarea>
 						<small class="text-red"><i class="fa fa-exclamation-circle"></i> Sorry mail system currently not working. </small>
 					</div>
-					<button type="submit" class="btn btn-outline-aqua ">Submit</button>
+					<button type="submit" class="btn btn-outline-aqua ">Send</button>
 				</form>
 			</div>
 		  </div>
