navbar-custom_update

--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
 	
   </head>
   <body>  
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <nav class="navbar navbar-expand-lg custom-navbar">
   		<a class="navbar-brand" href="http://abhishekrajravi.me/" style="font-family: 'Noto Serif', serif;"><i class="fa fa-terminal"> abhishekrajravi.me</i> </a>
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    		<span class="navbar-toggler-icon"></span>
+    		<span class="fa fa-bars" style="color: aqua"></span>
   		</button>
 
-  		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+  		<div class="collapse navbar-collapse navbar-nav-custom" id="navbarSupportedContent">
     		<ul class="navbar-nav ml-auto">
       			<li class="nav-item active">
-        			<a class="text-center nav-link smooth-scroll" href="#home-section">Home <span class="sr-only">(current)</span></a>
+        			<a class="text-center nav-link smooth-scroll" href="#home-section"><i class="fa fa-home"></i> Home <span class="sr-only">(current)</span></a>
       			</li>
       			<li class="nav-item">
-        			<a class="text-center nav-link smooth-scroll" href="#about-section">About Me</a>
+        			<a class="text-center nav-link smooth-scroll" href="#about-section"><i class="fa fa-user-o"></i> About</a>
 				</li>
 				<li class="nav-item">
-					<a class="text-center nav-link disabled" href="#">Project</a>
+					<a class="text-center nav-link disabled" href="#"><i class="fa fa-code"></i> Project</a>
 				</li>  
       			<li class="text-center nav-item">
-      				<a class="nav-link" data-toggle="modal" data-target="#exampleModalLong" href="#">Contact</a>
+      				<a class="nav-link" data-toggle="modal" data-target="#exampleModalLong" href="#"><i class="fa fa-commenting"></i> Contact</a>
       			</li>
     		</ul>
   		</div>
