--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 					<div class="form-group">
 						<div class="input-group mb-2">
 							<div class="input-group-prepend">
-			    				<div class="input-group-text">A</div>
+			    				<div class="input-group-text"><i class="fa fa-user"></i></div>
 							</div>
 							<input type="text" class="form-control text-aqua" id="inlineFormInputGroup" placeholder="Enter Your Name...">
 			        	</div>
@@ -199,7 +199,9 @@
 						<textarea class="form-control text-aqua" rows="3" placeholder="Enter Here Message..."></textarea>
 						<small class="text-red"><i class="fa fa-exclamation-circle"></i> Sorry mail system currently not working. </small>
 					</div>
-					<button type="submit" class="btn btn-outline-aqua ">Send</button>
+					<div class="text-right mr-3">
+						<button type="submit" class="btn btn-outline-aqua">Send</button>
+					</div>
 				</form>
 			</div>
 		  </div>
