--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<h4 class="text-md-right" style="font-family: 'Headland One', serif;">ABOUT&nbsp;&nbsp;&nbsp; </h4>
 					</div>
 					<div class="col-xl-6 col-md-6 col-lg-6 col-sm-12">
-						<div class="wow zoomIn"  data-wow-duration="2s" data-wow-delay="0.5s">
+						<div>
 							<p>My name is Abhishek Raj Ravi. I'm student of New Govt. Polyechnic, Patna-13. 
 							My major areas of interested Web Development. Currently, I'm able to code in HTML, CSS, JavaScript, ReactJs and i'm working to become proficient with NodeJs.</p><br>
 							<p>I, also have an extensive knowledge of C, C++, and Java</p><br>
@@ -92,7 +92,7 @@
 					</div>
 					<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
 						<div class="mb-5">
-							<p style="font-family: 'Headland One', serif;"><i class="fa fa-download fa-2x wow fadeIn infinite" data-wow-duration="1.2s" data-wow-delay="2s"  aria-hidden="true" style="color:rgb(174, 190, 192)"></i> GET THE CV </p>
+							<p style="font-family: 'Headland One', serif;"><i class="fa fa-download fa-2x wow fadeIn infinite" data-wow-duration="1.5s" data-wow-delay="0.5s"  aria-hidden="true" style="color:rgb(174, 190, 192)"></i> GET THE CV </p>
 						</div>
 					</div>
 				</div>
@@ -101,7 +101,7 @@
 					<div class="col-xl-3 col-md-3 col-lg-3 col-sm-12">
 						<h4 class="text-md-right" style="font-family: 'Headland One', serif;">EDUCATION&nbsp;&nbsp;&nbsp;</h4>
 					</div>
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 wow zoomIn"  data-wow-duration="2s" data-wow-delay="1s">
+					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
 						<h5>Diploma in computer Science & Engineering</h5>
 						<p>New Govt. Polytechnic, Patliputra, Patna-13</p>
 					</div>
@@ -111,7 +111,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 offset-md-3 wow zoomIn"  data-wow-duration="2s" data-wow-delay="1s">
+					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 offset-md-3">
 						<h5>Bihar School Examination Board, Patna (12th BSEB)</h5>
 						<p>Mata Indrani College, Chausa Buxar</p>
 					</div>
@@ -121,7 +121,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 offset-md-3 wow zoomIn"  data-wow-duration="2s" data-wow-delay="1s">
+					<div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 offset-md-3">
 						<h5>Bihar School Examination Board, Patna (10th BSEB)</h5>
 						<p>D. P. High School Unuwash, Buxar</p>
 					</div>
@@ -130,11 +130,11 @@
 					</div>
 				</div>
 				
-				<h5 class="mt-5 text-center i-think wow zoomInDown"  data-wow-duration="2s" data-wow-delay="0.5s" style="font-family: 'Headland One', serif; color:aquamarine">i'm thinking maybe </h5><div class="line2  wow flip"  data-wow-duration="2s" data-wow-delay="0.5s"></div>
-				<p class="text-center wow zoomInUp" data-wow-duration="2s" data-wow-delay="0.5s"  style="font-family: 'Josefin Slab', serif;"><i class="fa fa-quote-left fa-2x" style="color:rgb(159, 255, 255)"></i><span class="quote" style="color:rgb(0, 167, 189)">&nbsp;The man who can be control of himself, will be in able to conquer the world.&nbsp;</span><i class="fa fa-quote-right fa-2x" style="color:rgb(159, 255, 255)"></i> </p>
+				<h5 class="mt-5 text-center i-think" style="font-family: 'Headland One', serif; color:aquamarine">i'm thinking maybe </h5><div class="line2"></div>
+				<p class="text-center" style="font-family: 'Josefin Slab', serif;"><i class="fa fa-quote-left fa-2x" style="color:rgb(159, 255, 255)"></i><span class="quote" style="color:rgb(0, 167, 189)">&nbsp;The man who can be control of himself, will be in able to conquer the world.&nbsp;</span><i class="fa fa-quote-right fa-2x" style="color:rgb(159, 255, 255)"></i> </p>
 			</div>		
 			<div class="container pt-5 pb-2">
-				<div class="row wow fadeInDown " data-wow-duratin="2s" data-wow-delay="0.5s" >
+				<div class="row">
 					<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
 						<h4 class="text-center" >AROUND THE WEB</h4><div class="line mt-a"></div><div class="line2"></div>
 						<p class="text-center mt-5">
