--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					</div>
 					<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
 						<div class="mb-5">
-							<p style="font-family: 'Headland One', serif;"><i class="fa fa-download fa-2x wow fadeIn infinite" data-wow-duration="1.5s" data-wow-delay="0.5s"  aria-hidden="true" style="color:rgb(0, 255, 242)"></i> GET THE CV </p>
+							<p style="font-family: 'Headland One', serif;"><i class="fa fa-download fa-2x wow fadeIn infinite" data-wow-duration="1.5s" data-wow-delay="0.5s"  aria-hidden="true" style="color:rgb(99, 99, 99)"></i> GET THE CV </p>
 						</div>
 					</div>
 				</div>
@@ -130,8 +130,8 @@
 					</div>
 				</div>
 				
-				<h5 class="mt-5 text-center i-think" style="font-family: 'Headland One', serif; color:aquamarine">i'm thinking maybe </h5><div class="line2"></div>
-				<p class="text-center" style="font-family: 'Josefin Slab', serif;"><i class="fa fa-quote-left fa-2x" style="color:rgb(159, 255, 255)"></i><span class="quote" style="color:rgb(0, 167, 189)">&nbsp;The man who can be control of himself, will be in able to conquer the world.&nbsp;</span><i class="fa fa-quote-right fa-2x" style="color:rgb(159, 255, 255)"></i> </p>
+				<h5 class="mt-5 text-center i-think" style="font-family: 'Headland One', serif;">i'm thinking maybe </h5><div class="line2"></div>
+				<p class="text-center" style="font-family: 'Josefin Slab', serif;"><i class="fa fa-quote-left fa-2x"></i><span class="quote">&nbsp;The man who can be control of himself, will be in able to conquer the world.&nbsp;</span><i class="fa fa-quote-right fa-2x""></i> </p>
 			</div>		
 			<div class="container pt-5 pb-2">
 				<div class="row">
@@ -146,7 +146,7 @@
 						</p>
 						<p class="text-center mb-0"><a href="mailto:arr.bxr@gmail.com? Subject= The%20Subject&amp;body=Abhishek%20Raj%20Ravi%20" class="location"><i class="fa fa-envelope-open"></i> arr.bxr@gmail.com</a> </p>
 						<p class="text-center mb-0"><a href="tel:+918862838410" class="location"><i class="fa fa-phone-square"> </i> +91 8862838410</a></p>
-						<p class="text-center location" style="color:aquamarine"><i class="fa fa-map-marker"></i> Patna, India</p>
+						<p class="text-center location"><i class="fa fa-map-marker"></i> Patna, India</p>
 					</div>
 				</div>
 			</div>
