--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 		<section class="home-section" id="home-section">
 			<div class="home-section-caption">
-				<p class="text-center img"><img src="img/abhishek.jpg" class="img-fulid rounded-circle wow bounceInDown"  data-wow-duration="2s" data-wow-delay="1s" width="200px" height="200"></p>
+				<p class="text-center img"><img src="img/abhishek.jpg" class="img-fulid rounded-circle wow bounceInDown"  data-wow-duration="2s" data-wow-delay="1s" width="200" height="200"></p>
 				<p class="text-center my-name wow bounceInLeft"  data-wow-duration="2s" data-wow-delay="1s">Abhishek Raj Ravi</p><div class="line wow zoomIn"  data-wow-duration="2s" data-wow-delay="1s"></div>
 				<p class="text-center my-name-desc wow bounceInRight" data-wow-duration="2s" data-wow-delay="1s">Front-End Developer</p>
 			</div>
