--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 							<a href="https://github.com/arrbxr" target="_blank" class="mr-3"><i class="fa fa-github-square fa-2x github"></i></a> 
 							<a href="https://codepen.io/arrbxr/" target="_blank" class="mr-3"><i class="fa fa-codepen fa-2x codepen"></i></a> 
 							<a href="https://www.freecodecamp.org/arrbxr" target="_blank" class="mr-3"><i class="fa fa-free-code-camp fa-2x free-code-camp"></i></a>
-							<a href="https://medium.com/@arrbxr" target="_blank" class="mr-3"><i class="fa fa-medium fa-2x medium"></i></a>
+							<a href="https://twitter.com/arrbxr" target="_blank" class="mr-3"><i class="fa fa-twitter-square fa-2x medium"></i></a>
 							<a href="https://www.facebook.com/arrbxr" target="_blank"><i class="fa fa-facebook-square fa-2x facebook"></i></a>
 						</p>
 						<p class="text-center mb-0"><a href="mailto:arr.bxr@gmail.com? Subject= The%20Subject&amp;body=Abhishek%20Raj%20Ravi%20" class="location"><i class="fa fa-envelope-open"></i> arr.bxr@gmail.com</a> </p>
