--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 				</div>
 				
 				<h5 class="mt-5 text-center i-think" style="font-family: 'Headland One', serif;">i'm thinking maybe </h5><div class="line2"></div>
-				<p class="text-center" style="font-family: 'Josefin Slab', serif;"><i class="fa fa-quote-left fa-2x"></i><span class="quote">&nbsp;The man who can be control of himself, will be in able to conquer the world.&nbsp;</span><i class="fa fa-quote-right fa-2x""></i> </p>
+				<p class="text-center" style="font-family: 'Josefin Slab', serif;"><i class="fa fa-quote-left fa-2x"></i><span class="quote">&nbsp;The man who can be control of himself, will be in able to conquer the world.&nbsp;</span><i class="fa fa-quote-right fa-2x"></i> </p>
 			</div>		
 			<div class="container pt-5 pb-2">
 				<div class="row">
@@ -199,8 +199,8 @@
 						<textarea class="form-control text-aqua" rows="3" placeholder="Enter Here Message..."></textarea>
 						<small class="text-red"><i class="fa fa-exclamation-circle"></i> Sorry mail system currently not working. </small>
 					</div>
-					<div class="text-right mr-3">
-						<button type="submit" class="btn btn-outline-aqua">Send</button>
+					<div class="text-right">
+						<button type="submit" class="btn btn-outline-aqua">Send <i class="fa fa-paper-plane"></i> </button>
 					</div>
 				</form>
 			</div>
