--- a/index.html
+++ b/index.html
@@ -63,8 +63,14 @@
       				<a class="nav-link" data-toggle="modal" data-target="#exampleModalLong" href="#"><i class="fa fa-commenting"></i> Contact</a>
       			</li>
     		</ul>
-  		</div>
+			</div>
 	</nav>
+
+	<div class="progress-container">
+		<div class="progress-bar" id="myBar"></div>
+	</div>
+
+
 
 
 		<section class="home-section" id="home-section">
@@ -215,26 +221,12 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-
+	<script src="js/abhishekrajravi.js"></script>
 	<script>
 		new WOW().init();
 </script>
 
-	<script>
-			$(document).ready(function() {
-			$("a").on('click', function(event) {
-				if (this.hash !== "") {
-					event.preventDefault();
-					var hash = this.hash;
-					$('html, body').animate({
-					scrollTop: $(hash).offset().top - 120
-				}, 800, function() {
-				window.location.hash = hash;
-			  });
-			} 
-		  });
-		});
-	</script>
+
 
   </body>
 </html>
