--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 			<div class="container pt-5 pb-2">
 				<div class="row">
 					<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-						<h4 class="text-center" >AROUND THE WEB</h4><div class="line mt-a"></div><div class="line2"></div>
-						<p class="text-center mt-5">
+						<h4 class="text-center" >AROUND THE WEB</h4><div class="line mt-"></div><div class="line2"></div>
+						<p class="text-center mt-4">
 							<a href="https://github.com/arrbxr" target="_blank" class="mr-3"><i class="fa fa-github-square fa-2x github"></i></a> 
 							<a href="https://codepen.io/arrbxr/" target="_blank" class="mr-3"><i class="fa fa-codepen fa-2x codepen"></i></a> 
 							<a href="https://www.freecodecamp.org/arrbxr" target="_blank" class="mr-3"><i class="fa fa-free-code-camp fa-2x free-code-camp"></i></a>
