facebook follow buttom add

--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
   gtag('config', 'UA-112684057-1');
 	</script>
 
-
-	
   </head>
   <body>  
     <nav class="navbar navbar-expand-lg custom-navbar">
@@ -79,6 +77,8 @@
 				<p class="text-center my-name wow bounceInLeft"  data-wow-duration="2s" data-wow-delay="1s">Abhishek Raj Ravi</p><div class="line wow zoomIn"  data-wow-duration="2s" data-wow-delay="1s"></div>
 				<p class="text-center my-name-desc wow bounceInRight" data-wow-duration="2s" data-wow-delay="1s">Front-End Developer</p>
 			</div>
+				<iframe class="facebook-follow" src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2Farrbxr&width=100&height=65&layout=button&size=large&show_faces=false&appId=557158054664775" width="100" height="50" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+
 		</section>
 
 		<section class="about-section py-5" id="about-section">
