--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
 					</div>
 					<div class="col-xl-6 col-md-6 col-lg-6 col-sm-12">
 						<div>
-							<p>My name is Abhishek Raj Ravi. I'm student of New Govt. Polyechnic, Patna-13. 
-							My major areas of interested Web Development. Currently, I'm able to code in HTML, CSS, JavaScript, ReactJs and i'm working to become proficient with NodeJs.</p><br>
+							<p></p>My name is Abhishek Raj Ravi. I'm a student of New Govt. Polytechnic, Patna-13. My major areas of interested Web Development. Currently, I'm able to code in HTML, CSS, JavaScript, ReactJs and I'm working to become proficient with NodeJs.</p><br>
 							<p>I, also have an extensive knowledge of C, C++, and Java</p><br>
-							<p>I am passionate about open Source, have considerable experience with GIT technology, and have been an active open source contributor since December 2017.
+							<p>I am passionate about Open Source, have considerable experience with GIT technology, and have been an active open source contributor since December 2017.
 							</p><br>
 						</div>
 					</div>
