Title name change

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
 	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <title>Abhishek Raj Ravi Portfolio</title>
+    <title>Abhishek Raj Ravi</title>
 	  <link rel="stylesheet" type="text/css" href="css/abhishekrajravi.css">
 		<link rel="shortcut icon" type="image/png" href="img/abhishek.jpg" />
 		<link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
