--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="I'm Abhishek Raj Ravi, a front-end developer from india, and this is my portfolio.">
 
 		<!-- Facebook -->
-		<meta property="og:title" content="Abhishek Raj Ravi Portfolio">
+		<meta property="og:title" content="Abhishek Raj Ravi">
     <meta property="og:site_name" content="abhishekrajravi.me">
     <meta property="og:url" content="http://abhishekrajravi.me/">
     <meta property="og:description" content="I'm Abhishek Raj Ravi, a front-end developer from india, and this is my portfolio. ">
