replace front-end developer to computer science Engg.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="I'm Abhishek Raj Ravi, a front-end developer from india, and this is my portfolio.">
+		<meta name="description" content="I'm Abhishek Raj Ravi, a Computer Science Engg. from india, and this is my portfolio.">
 
 		<!-- Facebook -->
 		<meta property="og:title" content="Abhishek Raj Ravi">
     <meta property="og:site_name" content="abhishekrajravi.me">
     <meta property="og:url" content="http://abhishekrajravi.me/">
-    <meta property="og:description" content="I'm Abhishek Raj Ravi, a front-end developer from india, and this is my portfolio. ">
+    <meta property="og:description" content="I'm Abhishek Raj Ravi, a Computer Science Engg. from india, and this is my portfolio. ">
 		<meta property="og:image" content="https://github.com/arrbxr/portfolio/blob/master/img/abhishek.jpg?raw=true">
 		<meta property="og:type" content="website">
 
@@ -75,7 +75,7 @@
 			<div class="home-section-caption">
 				<p class="text-center img"><img src="img/abhishek.jpg" class="img-fulid rounded-circle wow bounceInDown"  data-wow-duration="2s" data-wow-delay="1s" width="200" height="200" alt="Abhishek image"></p>
 				<p class="text-center my-name wow bounceInLeft"  data-wow-duration="2s" data-wow-delay="1s">Abhishek Raj Ravi</p><div class="line wow zoomIn"  data-wow-duration="2s" data-wow-delay="1s"></div>
-				<p class="text-center my-name-desc wow bounceInRight" data-wow-duration="2s" data-wow-delay="1s">Front-End Developer</p>
+				<p class="text-center my-name-desc wow bounceInRight" data-wow-duration="2s" data-wow-delay="1s">Computer Science Engg.</p>
 			</div>
 			
 		</section>
