--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </head>
   <body>  
     <nav class="navbar navbar-expand-lg custom-navbar">
-  		<a class="navbar-brand" href="arrbxr.github.io" style="font-family: 'Noto Serif', serif;"><i class="fa fa-terminal"> Abhishek_Raj_Ravi</i> </a>
+  		<a class="navbar-brand" href="arrbxr.github.io" style="font-family: 'Noto Serif', serif;">ABHISHEK RAJ RAVI</a>
   		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     		<span class="fa fa-bars" style="color: aqua"></span>
   		</button>
