--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 			<div class="home-section-caption">
 				<p class="text-center img"><img src="https://avatars2.githubusercontent.com/u/29349558?s=460&v=4" class="img-fulid rounded-circle wow bounceInDown"  data-wow-duration="2s" data-wow-delay="1s" width="200" height="200" alt="Abhishek image"></p>
 				<p class="text-center my-name wow bounceInLeft"  data-wow-duration="2s" data-wow-delay="1s">Abhishek Raj Ravi</p><div class="line wow zoomIn"  data-wow-duration="2s" data-wow-delay="1s"></div>
-				<p class="text-center my-name-desc wow bounceInRight" data-wow-duration="2s" data-wow-delay="1s">Front-End Developer <br> I ❤ code && 🎶 💃</p>
+				<p class="text-center my-name-desc wow bounceInRight" data-wow-duration="2s" data-wow-delay="1s">Front-End Developer <br> I ❤ code & 🎶 💃💃</p>
 			</div>
 			
 		</section>
