--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					</div>
 					<div class="col-xl-3 col-lg-3 col-md-3 col-sm-12">
 						<div class="mb-5">
-							<p style="font-family: 'Headland One', serif;"><i class="fa fa-download fa-2x wow fadeIn infinite" data-wow-duration="1.5s" data-wow-delay="0.5s"  aria-hidden="true" style="color:rgb(99, 99, 99)"></i> GET THE CV </p>
+							<a href="resume.pdf" target = "_blank"><p style="font-family: 'Headland One', serif;"><i class="fa fa-download fa-2x wow fadeIn infinite" data-wow-duration="1.5s" data-wow-delay="0.5s"  aria-hidden="true" style="color:rgb(99, 99, 99)"></i> GET THE CV </p></a?
 						</div>
 					</div>
 				</div>
